export interface Building {
    code?: string;
    name?: string;
    description?: string;
    numXCells?: number | undefined;
    numYCells?: number | undefined;
}